# bitsim

./: .gitignore  .gitmodules  README.md  bitsim.cpp  meson.build  xmake.lua
include/: init.hpp
src/: bitsim.cpp  init.cpp
